k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-waylonwalker-com
  labels:
    app.kubernetes.io/name: waylonwalker-com
