k8s/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: waylonwalker-com-headless
  namespace: go-waylonwalker-com
  labels:
    app.kubernetes.io/name: waylonwalker-com
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: waylonwalker-com
