k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waylonwalker-com
  namespace: go-waylonwalker-com
  labels:
    app.kubernetes.io/name: waylonwalker-com
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: waylonwalker-com
